@@ -33,16 +33,15 @@ import org.apache.cayenne.map.EntityResolver;
 public abstract class IndirectQuery implements Query {
 
     protected String name;
-    
+
     /**
      * @since 3.1
      */
     protected DataMap dataMap;
 
-
     protected transient Query replacementQuery;
-    
-     protected transient EntityResolver lastResolver;
+
+    protected transient EntityResolver lastResolver;
 
     /**
      * @since 3.1
@@ -50,15 +49,14 @@ public abstract class IndirectQuery implements Query {
     public <T> T acceptVisitor(ConfigurationNodeVisitor<T> visitor) {
         return visitor.visitQuery(this);
     }
-    
+
     /**
      * @since 3.1
      */
     public DataMap getDataMap() {
         return dataMap;
     }
-    
-    
+
     /**
      * @since 3.1
      */
